--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.0.3",
     "prettier": "^3.1.0",
     "react": "^18",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18"
   },
   "devDependencies": {
