--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^3.3.0",
+    "@auth0/nextjs-auth0/edge": "^3.3.0",
     "next": "14.0.3",
     "prettier": "^3.1.0",
     "react": "^18",
