--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,5 +29,5 @@
   },
   "peacock.color": "#42b883",
   "editor.formatOnSave": true,
-  "cSpell.words": ["Avalore"]
+  "cSpell.words": ["Authed", "Avalore", "Castlegate", "Elven", "Longbowmen", "Ronin", "Rōnin", "Shinobi"]
 }
