--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 3999",
     "build": "next build",
     "start": "next start -p 3999",
-    "lint": "next lint"
+    "lint": "next lint",
+    "ts:check": "tsc --noEmit"
   },
   "dependencies": {
     "@auth0/nextjs-auth0/edge": "^3.3.0",
