--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "scripts": {
     "dev": "next dev -p 3999",
     "build": "next build",
-    "start": "next start -p 3999",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint",
     "ts:check": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0/edge": "^3.3.0",
-    "next": "14.0.3",
+    "@auth0/nextjs-auth0": "^3.5.0",
+    "next": "^14.2.3",
     "prettier": "^3.1.0",
     "react": "^18",
     "react-accessible-accordion": "^5.0.0",
