--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@types/react-burger-menu": "^2.8.7",
     "next": "^14.2.3",
     "prettier": "^3.1.0",
     "react": "^18",
     "react-accessible-accordion": "^5.0.0",
-    "react-dom": "^18"
+    "react-burger-menu": "^3.0.9",
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
