--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
     "@types/react-burger-menu": "^2.8.7",
+    "jsonwebtoken": "^9.0.2",
     "next": "^14.2.3",
     "prettier": "^3.1.0",
     "react": "^18",
@@ -22,6 +23,7 @@
     "sharp": "^0.33.4"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -30,6 +32,6 @@
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5.5.0-beta"
   }
 }
