--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,5 +29,17 @@
   },
   "peacock.color": "#42b883",
   "editor.formatOnSave": true,
-  "cSpell.words": ["Authed", "Avalore", "Castlegate", "Elven", "Longbowmen", "Ronin", "Rōnin", "Shinobi", "typeguard"]
+  "cSpell.words": [
+    "Authed",
+    "Avalore",
+    "Castlegate",
+    "Elven",
+    "Longbowmen",
+    "missles",
+    "Ronin",
+    "Rōnin",
+    "Shinobi",
+    "typeguard",
+    "warrirors"
+  ]
 }
