--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
     "@types/react-burger-menu": "^2.8.7",
+    "classnames": "^2.5.1",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.2.3",
     "prettier": "^3.1.0",
