--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-accessible-accordion": "^5.0.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "sharp": "^0.33.4"
   },
