--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "ts:check": "tsc --noEmit"
   },
   "dependencies": {
+    "@amplitude/analytics-browser": "^2.11.1",
     "@auth0/nextjs-auth0": "^3.5.0",
     "@types/react-burger-menu": "^2.8.7",
+    "amplitude-js": "^8.21.9",
     "classnames": "^2.5.1",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.2.5",
@@ -25,6 +27,7 @@
     "sharp": "^0.33.4"
   },
   "devDependencies": {
+    "@types/amplitude-js": "^8.16.5",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22",
     "@types/react": "^18",
