--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@types/react-burger-menu": "^2.8.7",
     "classnames": "^2.5.1",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.2.5",
+    "npm": "^10.8.3",
     "prettier": "^3.3.3",
     "react": "^18",
     "react-accessible-accordion": "^5.0.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
     "sharp": "^0.33.4"
   },
