--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@amplitude/analytics-browser": "^2.11.1",
     "@auth0/nextjs-auth0": "^3.5.0",
     "@types/react-burger-menu": "^2.8.7",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
     "classnames": "^2.5.1",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
