--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.5.1",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "next": "^14.2.5",
     "npm": "^10.8.3",
     "prettier": "^3.3.3",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@types/amplitude-js": "^8.16.5",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash": "^4.17.12",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
