--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
 
   "rules": {
     "react/no-unescaped-entities": 0,
-    "@typescript-eslint/no-explicit-any": "warn"
+    "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/no-unused-vars": "warn"
   }
 }
