--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "NODE_ENV=production next build",
     "build:no-lint": "DISABLE_ESLINT_PLUGIN=true NODE_ENV=production next build",
     "start": "NODE_ENV=production node server.js",
-    "lint": "next lint",
-    "ts:check": "tsc --noEmit"
+    "ts:check": "tsc --noEmit",
+    "lint": "next lint && tsc --noEmit"
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^2.11.1",
