--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:no-lint": "DISABLE_ESLINT_PLUGIN=true NODE_ENV=production next build",
     "start": "NODE_ENV=production node server.js",
     "ts:check": "tsc --noEmit",
-    "lint": "next lint && tsc --noEmit"
+    "lint": "next lint && tsc --noEmit",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^2.11.1",
@@ -21,6 +22,7 @@
     "lodash": "^4.17.21",
     "next": "^14.2.5",
     "npm": "^10.8.3",
+    "patch-package": "^8.0.0",
     "prettier": "^3.3.3",
     "react": "^18",
     "react-accessible-accordion": "^5.0.0",
