--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3999",
+    "dev": "next dev --turbopack -p 3999",
     "build": "NODE_ENV=production next build",
     "build:no-lint": "DISABLE_ESLINT_PLUGIN=true NODE_ENV=production next build",
     "start": "NODE_ENV=production node server.js",
@@ -14,19 +14,19 @@
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^2.11.1",
-    "@auth0/nextjs-auth0": "^3.5.0",
+    "@auth0/nextjs-auth0": "^4.0.2",
     "@types/react-burger-menu": "^2.8.7",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "classnames": "^2.5.1",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "next": "^14.2.5",
+    "next": "15.0.3",
     "npm": "^10.8.3",
     "prettier": "^3.3.3",
-    "react": "^18",
-    "react-burger-menu": "^3.0.9",
-    "react-dom": "^18",
+    "react": "^19.0.0",
+    "react-burger-menu": "^3.1.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "sharp": "^0.33.5"
@@ -40,12 +40,12 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.12",
     "@types/node": "^22",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "15.0.3",
     "husky": "^9.1.7",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.7.0",
@@ -54,5 +54,9 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.5"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   }
 }
