--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "next": "15.0.3",
+    "next": "^15.0.3",
     "npm": "^10.8.3",
     "prettier": "^3.3.3",
     "react": "^19.0.0",
@@ -40,8 +40,8 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.12",
     "@types/node": "^22",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
     "eslint": "^8",
@@ -54,9 +54,5 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.5"
-  },
-  "overrides": {
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   }
 }
