--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:no-lint": "DISABLE_ESLINT_PLUGIN=true NODE_ENV=production next build",
     "start": "NODE_ENV=production node server.js",
     "ts:check": "tsc --noEmit",
+    "test": "TZ=America/New_York jest --maxWorkers=2 --transformIgnorePatterns",
     "lint": "next lint && tsc --noEmit"
   },
   "dependencies": {
@@ -30,17 +31,26 @@
     "sharp": "^0.33.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
     "@types/amplitude-js": "^8.16.5",
+    "@types/jest": "^29.5.13",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.12",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "babel-jest": "^29.7.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.7",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5"
   }
 }
