--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "NODE_ENV=production node server.js",
     "ts:check": "tsc --noEmit",
     "test": "TZ=America/New_York jest --maxWorkers=2 --transformIgnorePatterns",
-    "lint": "next lint && tsc --noEmit"
+    "lint": "next lint && tsc --noEmit",
+    "prepare": "husky"
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^2.11.1",
@@ -45,6 +46,7 @@
     "babel-jest": "^29.7.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "husky": "^9.1.7",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
